--- a/registration.html
+++ b/registration.html
@@ -11,7 +11,7 @@
     <header id="main-header">
       <ul>
         <li>
-          <a href="../index.html">Home</a>
+          <a href="./index.html">Home</a>
         </li>
 
         <li><a href="./roadMap.html">Road Map</a></li>
