update sum prompt msg

--- a/sum.html
+++ b/sum.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <script type="text/javascript">
-      const n1 = Number(prompt("Enter first name"));
-      const n2 = Number(prompt("Enter last name"));
+      const n1 = Number(prompt("Enter first number"));
+      const n2 = Number(prompt("Enter last number"));
       const sum = n1 + n2;
 
       document.write(`${n1} + ${n2} = ${sum}`);
