--- a/index1.html
+++ b/index1.html
@@ -79,6 +79,39 @@
           calcResult.innerHTML = "Result is <b>" + result + "</b>";
         }
       });
+
+      // Part 2 with prompt and alert
+      // let result;
+
+      // function calcSum(num1) {
+      //   let operation = prompt("enter an operation (sum, subtract, times, or divide)");
+      //   let num2 = "";
+      //   if (operation !== "" && operation !== null) {
+      //     num2 = prompt("enter second number");
+      //   }
+
+      //   if (num2 !== "" && num2 !== null && num1 !== "" && num1 !== null) {
+      //     if (operation == "sum") {
+      //       result = Number(num1) + Number(num2);
+      //     } else if (operation == "subtract") {
+      //       result = Number(num1) - Number(num2);
+      //     } else if (operation == "times") {
+      //       result = Number(num1) * Number(num2);
+      //     } else if (operation == "divide") {
+      //       result = Number(num1) / Number(num2);
+      //     }
+
+      //     alert(result);
+
+      //     if (!isNaN(result)) {
+      //       calcSum(result);
+      //     }
+      //   }
+      // }
+
+      // let n1 = prompt("enter first number");
+
+      // calcSum(n1);
     </script>
   </body>
 </html>
