--- a/index3.html
+++ b/index3.html
@@ -6,5 +6,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML5 / CSS3 - Lab 1</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <label for="">a "horizontal":</label>
+      <input type="number" id="a" value="200" />
+    </div>
+    <br />
+    <div>
+      <label for="">b "vertical":</label>
+      <input type="number" id="b" value="200" />
+    </div>
+
+    <br />
+
+    <svg height="500" width="500" style="border: 2px solid black">
+      <!-- a1(bx2,by2) a2(w+10, by2) -->
+      <line
+        id="aPoint"
+        x1="10"
+        y1="200"
+        x2="200"
+        y2="200"
+        style="stroke: green; stroke-width: 2"
+      ></line>
+
+      <!-- y2 = bh -->
+      <line
+        id="bPoint"
+        x1="10"
+        y1="0"
+        x2="10"
+        y2="200"
+        style="stroke: green; stroke-width: 2"
+      ></line>
+
+      <line
+        id="cPoint"
+        x1="10"
+        y1="0"
+        x2="300"
+        y2="200"
+        style="stroke: green; stroke-width: 2"
+      ></line>
+      Sorry, your browser does not support inline SVG.
+    </svg>
+
+    <script>
+      const a = document.getElementById("a");
+      const b = document.getElementById("b");
+      const aPoint = document.getElementById("aPoint");
+      const bPoint = document.getElementById("bPoint");
+      const cPoint = document.getElementById("cPoint");
+
+      const makeTriangle = () => {
+        let aVal = a.value;
+        let bVal = b.value;
+        let c = Math.sqrt(aVal ** 2 + bVal ** 2);
+
+        aPoint.setAttribute("y1", bVal);
+        aPoint.setAttribute("x2", aVal);
+        aPoint.setAttribute("y2", bVal);
+
+        bPoint.setAttribute("y2", bVal);
+
+        cPoint.setAttribute("x2", aVal);
+        cPoint.setAttribute("y2", bVal);
+
+        console.log(c);
+      };
+
+      makeTriangle();
+
+      a.addEventListener("change", makeTriangle);
+      b.addEventListener("change", makeTriangle);
+    </script>
+  </body>
 </html>
