--- a/index3.html
+++ b/index3.html
@@ -51,6 +51,34 @@
       Sorry, your browser does not support inline SVG.
     </svg>
 
+    <br />
+    <br />
+
+    <math>
+      <mrow>
+        <mi>c</mi>
+        <mo>=</mo>
+        <mrow>
+          <mo>&#8730;</mo>
+          <msup>
+            <mi>a</mi>
+            <mn>2</mn>
+          </msup>
+          <mo>+</mo>
+          <msup>
+            <mi>b</mi>
+            <mn>2</mn>
+          </msup>
+        </mrow>
+      </mrow>
+    </math>
+
+    <script
+      type="text/javascript"
+      async
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=MML_HTMLorMML"
+    ></script>
+
     <script>
       const a = document.getElementById("a");
       const b = document.getElementById("b");
