--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       .task2 {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         gap: 1rem;
         padding: 1rem;
         flex-wrap: wrap;
