--- a/html/signup.html
+++ b/html/signup.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <section style="max-width: 600px; margin: 2rem auto; padding: 1rem 2rem">
-      <form action="signup" method="post">
+      <form action="/signup" method="post">
         <div>
           <label for="name">Name</label>
           <input type="text" name="name" id="name" />
